# rust-axum-boilerplate

./: .gitignore  Cargo.toml  README.md  notes.md
src/: lib.rs  main.rs  routes.rs
src/db/: mod.rs
src/db/entity/: prelude.rs  users.rs
src/db/migration/: m20240821_174402_users.rs  mod.rs
src/db/migration/src/: lib.rs
src/handlers/: auth_handler.rs  health_handler.rs
src/types/: auth_types.rs  custom_json_decoder_types.rs  error_types.rs  mod.rs  util_types.rs
src/utils/: constants.rs  guards.rs  jwt.rs  logging.rs  mod.rs
